# AISocks

./: .clang-format  .clangd  .dockerignore  .git_commit_msg.txt  .gitignore  AIThoughts.md  BUGFIX_PLAN.md  CMakeLists.txt  CMakePresets.json  COMMENT_AUDIT.md  CONTRIBUTING.md  Dockerfile.msan-arm64  HARDENING_FIX_PLAN_2026-03-12.md  NEW_CONTEXT_HANDOFF_2026-03-14.md  NEXT_SESSION_PLAN.md  PERFORMANCE.md  PERFORMANCE_AUDIT.md  PORT_ZERO_REFACTOR_PLAN.md  Plan.md  Plan_BuildInfo.md  Plan_CallIntervalTracker.md  Plan_FileServerUtils.md  Plan_HtmlEscape.md  Plan_HtmlPageGenerator.md  Plan_KeepAliveTimeoutManager.md  Plan_MimeTypes.md  README.md  README_EXAMPLES.md  README_SECURITY.md  README_TESTS.md  REFACTORING_CANDIDATES.md  REFACTOR_PLAN.md  SANITIZERS.md  SSL_CLIENT_HANDOFF.md  SSL_HARDEN_LIST.md  TESTING_VISUAL_STUDIO.md  UNIX_SOCKET_IMPL.md  advanced_server_examples.md  build_http_client.sh  build_times.csv  (+43 more)
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Testing/: TAG
build-mac/: .ninja_deps  .ninja_log  CMakeCache.txt  aiSocksExample  aiSocksNonBlocking  aiSocksTestBlocking  aiSocksTestIPUtils  aiSocksTestIPv6  aiSocksTestMove  build.ninja  cmake_install.cmake
build-mac/lib/: cmake_install.cmake
cmake/: mingw-w64-toolchain.cmake  toolchain-mingw64.cmake
examples/: LogRotation.cpp  advanced_file_server.cpp  advanced_file_server_pages.cpp  advanced_file_server_pages.h  advanced_file_server_strings.h  custom_file_server.cpp  custom_file_server_c_io.cpp.bak  custom_file_server_strings.h  custom_file_server_strings.h.bak  dual_http_https_server.cpp  echo_client.cpp  google_client.cpp  http_client_example.cpp  http_file_server.cpp  http_poll_server.cpp  low_level_http_server.cpp  main.cpp  nonblocking.cpp  peer_logger.cpp  server_conf.h  server_launchpad.cpp  simple_client_example.cpp  simple_file_server.cpp  socket_factory_demo.cpp  socket_result_api.cpp  test_blocking_state.cpp  test_ip_utils.cpp  test_ipv6.cpp  test_move_semantics.cpp  test_result_lazy.cpp  throughput_client.cpp  unix_throughput.cpp
html/: index.html
lib/: CMakeLists.txt  CMakeLists.txt.bak  LogRotation.md  cmake_install.cmake
lib/include/: AISocksConfig.h  AccessLogger.h  BuildInfo.h  CallIntervalTracker.h  ChronoCompat.h  ClientHttpRequest.h  CustomFileServerHtml.h  CustomFileServerHtmlHelpers.h  DualServerOrchestrator.h  ErrorFormatter.h  FileCache.h  FileIO.h  FileServerUtils.h  HeaderMap.h  HtmlEscape.h  HtmlPageGenerator.h  HttpClient.h  HttpFileServer.h  HttpPollServer.h  HttpPollServer.h.bak  HttpRequest.h  HttpResponse.h  HttpsFileServer.h  HttpsPollServer.h  IpFilter.h  KeepAliveTimeoutManager.h  LogRotation.h  MimeTypes.h  PathHelper.h  PollEventLoop.h  Poller.h  ProtocolDispatcher.h  Result.h  SSL_HARDEN_LIST.md  ServerBase.h  ServerBase.h.bak  ServerConf.h  ServerSignal.h  ServerTypes.h  SimpleClient.h  (+11 more)
lib/src/: AccessLogger.cpp  DualServerOrchestrator.cpp  FileCache.cpp  FileIO.cpp  HttpFileServer.cpp  HttpParserUtils.h  HttpPollServer.cpp  HttpProtocolDispatcher.cpp  HttpProtocolDispatcher.h  HttpRequest.cpp  HttpRequestFramer.h  HttpResponse.cpp  IpFilter.cpp  LogRotation.cpp  PathHelper.cpp  PollerEpoll.cpp  PollerKqueue.cpp  PollerWSAPoll.cpp  Result.cpp  ServerSignal.cpp  Socket.cpp  SocketFactory.cpp  SocketImpl.cpp  SocketImpl.h  SocketImplHelpers.cpp  SocketImplHelpers.h  SocketImpl_Connect.cpp  SocketImpl_IO.cpp  SocketImpl_Options.cpp  TcpSocket.cpp  TlsOpenSsl.cpp  UdpSocket.cpp  UnixSocket.cpp  UrlCodec.cpp  pch.cpp  pch.h
scripts/: auth_security_scan.sh  benchmark_large_file_server.sh  check_no_filesystem.sh  compare_preset_times.sh  concurrent_test.sh  coverage.sh  flag_debug_output.py  flood_attack.py  generate_https_flow_diagram.py  install-ci-notify-hook.sh  list_targets.sh  saturation_test.sh  security_test.sh  setup_asan.sh  wine_test.sh
tests/: API_MIGRATION_GUIDE.md  CMakeLists.txt  CMakeLists.txt.bak  fuzz_client_roundtrip.cpp  fuzz_client_url_parse.cpp  fuzz_html_escape.cpp  fuzz_http_request.cpp  fuzz_http_response.cpp  fuzz_path_helper.cpp  fuzz_pipeline.cpp  fuzz_resolve_path.cpp  fuzz_url_codec.cpp  openssl_applink.cpp  pch_stub.cpp  test_access_logger.cpp  test_advanced_file_server.cpp  test_blocking.cpp  test_bugfix_coverage.cpp  test_client_http_request.cpp  test_config_editor.cpp  test_construction.cpp  test_construction_old.cpp  test_custom_file_server.cpp  test_custom_file_server.cpp.bak  test_dns_resolution_gate.cpp  test_dual_server_conf.cpp  test_dual_server_orchestrator.cpp  test_error_handling.cpp  test_error_handling_old.cpp  test_error_messages.cpp  test_extracted_components.cpp  test_file_cache.cpp  test_file_io.cpp  test_file_server_utils.cpp  test_fixes.PVS-Studio.cfg  test_fixes.PVS-Studio.i  test_fixes.cpp  test_helpers.h  test_html_escape.PVS-Studio.cfg  test_html_escape.PVS-Studio.i  (+88 more)
tests/certs/: openssl_local.cnf  test_cert.pem  test_cert_ipv6.pem  test_cert_ipv6_mismatch.pem  test_cert_local.pem  test_key.pem  test_key_ipv6.pem  test_key_ipv6_mismatch.pem  test_key_local.pem
windows-test/: README_WINE.md  run_all_tests.bat  run_examples.bat  run_tests.bat  run_wine_tests.sh  run_with_timeout.sh  simple_wine_test.sh  wine.sh
www/: .config.conf.swp  config-editor.html  config-editor.js  config.conf  demo.html  index.html  jstest.html  public.html  style.css  test.js  testing-guide.html
www/files/: README.txt
